--- a/automations.yaml
+++ b/automations.yaml
@@ -2080,6 +2080,11 @@
   - condition: time
     after: input_datetime.marilou_bedtime_routine_end
   action:
+  - service: media_player.media_pause
+    metadata: {}
+    data: {}
+    target:
+      entity_id: media_player.music_assistant_chambre_marilou_muse_luxe
   - service: media_player.turn_off
     data: {}
     target:
@@ -2529,9 +2534,6 @@
   trigger:
   - platform: state
     entity_id:
-    - switch.prise_bureau
-  - platform: state
-    entity_id:
     - switch.prise_frigo
   - platform: state
     entity_id:
@@ -2539,9 +2541,6 @@
   - platform: state
     entity_id:
     - switch.prise_machine_a_laver
-  - platform: state
-    entity_id:
-    - switch.prise_media_center
   - platform: state
     entity_id:
     - switch.prise_server
@@ -2958,21 +2957,179 @@
       entity_id: vacuum.neuneu
   - set_conversation_response: Nettoyage arreté
   mode: single
-- id: '1707327950754'
-  alias: "\U0001F4E3 Get room temperatures"
+- id: '1707424061311'
+  alias: "Routine du sommeil Marilou - \U0001F4E3 Lancer par commande vocale "
   description: ''
   trigger:
   - platform: conversation
-    command: What is the temperature in my home
-  condition:
-  - condition: zone
-    entity_id: person.jenova70
-    zone: zone.home
-    alias: Confirm Paulus is home
+    command:
+    - 'Au dodo '
+    - (Au lit)|(Ollie)|(Holly)
+  condition: []
   action:
-  - alias: Set conversation response
-    set_conversation_response: 'The temperature in the living room is {{states("sensor.capteur_thp_salon_temperature")}}°
-      and
-
-      the temperature in the bedroom is {{states("sensor.capteur_thp_bureau_temperature")}}°'
+  - service: script.start_marilou_bedtime_routine
+    metadata: {}
+    data: {}
+  - service: light.turn_off
+    metadata: {}
+    data: {}
+    target:
+      area_id: chambre_bebe
+  - set_conversation_response: Bonne nuit
+  mode: single
+- id: '1707728356919'
+  alias: "Meta Quest - \U0001F6CE️ Notification batterie faible."
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - binary_sensor.quest_in_use
+    to: 'off'
+    from: 'on'
+  condition:
+  - condition: numeric_state
+    entity_id: sensor.quest_battery_level
+    below: 50
+  action:
+  - event: NOTIFIER
+    event_data:
+      action: send_to_jl
+      title: "️\U0001F576️ Quest"
+      message: "La batterie du Quest est actuellement à {{states(\"sensor.quest_battery_level\")}}%.
+        Pense à le recharger. \n"
+      tag: charge_quest
+  mode: single
+- id: '1707905923894'
+  alias: TMP
+  description: ''
+  trigger:
+  - platform: conversation
+    command:
+    - Raise the desk
+    id: up
+  - platform: conversation
+    command:
+    - Lower the desk
+    id: down
+  condition:
+  - condition: state
+    entity_id: binary_sensor.standing_desk_moving
+    state: 'off'
+  action:
+  - choose:
+    - conditions:
+      - condition: trigger
+        id:
+        - up
+      sequence:
+      - service: button.press
+        metadata: {}
+        data: {}
+        target:
+          entity_id: button.standing_desk_move_desk_to_position_1
+      - set_conversation_response: Raising the desk
+    - conditions:
+      - condition: trigger
+        id:
+        - down
+      sequence:
+      - service: button.press
+        metadata: {}
+        data: {}
+        target:
+          entity_id:
+          - button.standing_desk_move_desk_to_position_2
+      - set_conversation_response: Lowering the desk
+  mode: single
+- id: '1708194950863'
+  alias: Party Time Marilou
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - input_boolean.party_time_marilou
+  condition: []
+  action:
+  - choose:
+    - conditions:
+      - condition: state
+        entity_id: input_boolean.party_time_marilou
+        state: 'on'
+      sequence:
+      - service: light.turn_on
+        metadata: {}
+        data:
+          rgb_color:
+          - 40
+          - 95
+          - 244
+          brightness_pct: 100
+        target:
+          entity_id: light.chambre_bebe_leds
+      - service: light.turn_on
+        metadata: {}
+        data:
+          rgb_color:
+          - 235
+          - 77
+          - 61
+          brightness_pct: 100
+        target:
+          entity_id:
+          - light.miffy
+      - service: light.turn_on
+        metadata: {}
+        data:
+          rgb_color:
+          - 255
+          - 0
+          - 255
+          brightness_pct: 100
+        target:
+          entity_id:
+          - light.chambre_bebe_suspension
+      - service: light.turn_on
+        metadata: {}
+        data:
+          effect: prism
+        target:
+          entity_id:
+          - light.chambre_bebe_suspension
+          - light.chambre_bebe_leds
+          - light.miffy
+      - service: light.turn_on
+        metadata: {}
+        data:
+          effect: candle
+        target:
+          entity_id: light.chambre_bebe_etoile
+      - service: light.turn_on
+        metadata: {}
+        data: {}
+        target:
+          entity_id: light.chambre_bebe_guirlande
+      - service: light.turn_on
+        metadata: {}
+        data:
+          brightness_pct: 100
+        target:
+          entity_id: light.chambre_bebe_etoile
+    - conditions:
+      - condition: state
+        entity_id: input_boolean.party_time_marilou
+        state: 'off'
+      sequence:
+      - service: light.turn_on
+        metadata: {}
+        data:
+          brightness_pct: 100
+          effect: none
+          kelvin: 2457
+        target:
+          area_id: chambre_bebe
+      - service: light.turn_off
+        metadata: {}
+        data: {}
+        target:
+          area_id: chambre_bebe
   mode: single
